fixed homepage slider image size on mobile max 500px size

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -229,8 +229,14 @@ color: white;
 
 }
 
+/*======================homepage slideshow===========================*/
 
+@media only screen and (max-width: 500px) {
 
+    .carousel-inner > .item > img {
+    height: 250px;
+    }
+}
 
 
 
